[package]
name = "licer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select", "default"]}
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.52.0", features = ["full"] }
color-eyre = "0.6.5"
